# aws-lambda-telescope-elasticsearch

./: .bandit  .pre-commit-config.yaml  Makefile  README.md  buildspec.yml  pyproject.toml
resources/aws-sam-cli/: template.yaml
src/: app_info.py  elasticsearch_api.py  handler.py  index_tools.py  send_graphyte_message.py
tests/unit/: test_gets_shards.py  test_index_tools.py
