[tool.poetry]
name = "aws-lambda-telescope-elasticsearch"
version = "0.0.0"
description = "An AWS Lambda that will which derives metrics from the elastic api"
authors = [""]
license = "Apache 2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "^1.16.1"

[tool.poetry.dev-dependencies]
aws-lambda-context = "^1.1.0"
aws-sam-cli = "^1.6.2"
bandit = "^1.7.0"
black = "^21.5b2"
safety = "^1.10.3"
taskipy = "^1.4.0"
version-incrementor = "^0.9.0"
colorama = "^0.4.4"
pre-commit = "^2.13.0"
mock = "^4.0.3"
nose = "^1.3.7"
coverage = "^5.5"

[tool.taskipy.tasks]
assemble = "./bin/lambda-tools.sh assemble"
bandit = "bandit -r ./src -c .bandit"
black_check = "black --check --diff ./src ./tests"
black_reformat = "black ./src ./tests"
clean = "rm -fr ./build"
cut_release = "./bin/lambda-tools.sh cut_release"
post_functest = "task stop_lambda"
pre_functest = "task assemble && task start_lambda"
prepare_release = "./bin/lambda-tools.sh prepare_release"
publish = "./bin/lambda-tools.sh publish"
publish_checksum_file = "./bin/lambda-tools.sh publish_checksum_file"
publish_s3 = "./bin/lambda-tools.sh publish_artifacts_to_s3"
rename_s3_file = "./bin/lambda-tools.sh rename_artifacts_in_s3"
safety = "safety check"
start_lambda = "./bin/start-lambda.sh"
stop_lambda = "./bin/stop-lambda.sh"
test = "task unittest"
unittest = "nosetests -v --with-cover --cover-erase --cover-package=src.handler tests/unit/*.py"
verify = "task test && task black_check && task safety && task bandit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
